# TE3002B

./: .gitignore  README_FIXES.txt
minichallenge_4/: package.xml  setup.cfg  setup.py
minichallenge_4/config/: color_detector_params.yaml  go_to_goal_params.yaml  odometry_params.yaml  traffic_light_params.yaml
minichallenge_4/launch/: challenge.launch.py
minichallenge_4/minichallenge_4/: color_detector_node.py  go_to_goal_node.py  odometry_node.py  traffic_light_controller.py
mobile_robotics/: TEST_GUIDE.sh  package.xml  setup.py
mobile_robotics/config/: go_to_goal_params.yaml  mobile_robotics_params.yaml  odometry_params.yaml  path_generator_params.yaml  speed_estimator_params.yaml
mobile_robotics/launch/: go_to_goal.launch.py  mini_challenge_2.launch.py  mobile_robotics.launch.py  odometry.launch.py  path_generator.launch.py  speed_estimator.launch.py
mobile_robotics/mobile_robotics/: encoder_simulator.py  go_to_goal_controller.py  go_to_goal_node.py  mobile_robotics_node.py  odometry_node.py  odometry_speed_estimator.py  path_generator_node.py  speed_estimator_node.py
mobile_robotics/square_controller/: go_to_goal_node.py  speed_estimator_node.py
square_controller/: package.xml  setup.cfg  setup.py
square_controller/config/: go_to_goal_params.yaml  params.yaml  path_params.yaml
square_controller/launch/: go_to_goal.launch.py  odometry.launch.py  path.launch.py  speed_estimator.launch.py  (+1 more)
square_controller_msgs/: CMakeLists.txt  package.xml
square_controller_msgs/msg/: Goals.msg
square_controller_msgs/resource/: square_controller_msgs
(+9 files in other folders)
