<?xml version="1.0"?>
<package format="3">
  <name>square_controller_msgs</name>
  <version>1.0.0</version>
  <description>Custom messages for square controller </description>

  <maintainer email="a01772503@tec.mx">MCR2 Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
